<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="text_check_internet" translatable="false">check your network connection</string>
    <string name="text_wait_try" translatable="false">Please try again later</string>
    <string name="loading" translatable="false">loading…</string>
    <string name="this_is_desc" translatable="false">is a picture</string>
    <string name="app_name" translatable="false">Kencanme</string>
    <string name="success" translatable="false">success</string>
    <string name="google" translatable="false">Google</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="album_num_max_12" translatable="false">Pass up to 12</string>
    <string name="album_num_max_8" translatable="false">Pass up to 8</string>
    <string name="album_num_max_6" translatable="false">Pass up to 6</string>
    <string name="money" translatable="false">$</string>
    <string name="money_yn" translatable="false">Rp</string>
    <string name="facebook_app_id" translatable="false">486430102169779</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb486430102169779</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="Preserve" translatable="false">Preserve</string>
    <string name="Complete" translatable="false">Complete</string>
    <string name="Payment" translatable="false">Payment</string>
    <string name="earn_beans" translatable="false">Earn Hey Beans</string>
    <string name="recharge" translatable="false">Purchase</string>
    <string name="wait_develop" translatable="false">waiting…</string>
    <string name="app_like" translatable="false">Like</string>
    <string name="app_chat" translatable="false">Chat</string>
    <string name="app_view" translatable="false">Check now</string>
    <string name="Hi_Beans" translatable="false">Hey Beans</string>
    <string name="login_hint" translatable="false">Welcome to login,please choose the following way to login.</string>
    <string name="recharge_current_beans_num_hint" translatable="false">Hey beans balance</string>
    <string name="recharge_amount_of_money" translatable="false">Amount</string>
    <string name="recharge_means_hint" translatable="false">* purchase means agree </string>
    <string name="recharge_app_agreement" translatable="false">《Kencanme payment agreement》</string>
    <string name="recharge_problems_hint" translatable="false">if your encounter purchase difficults please </string>
    <string name="recharge_contact_customer" translatable="false">&#160;contact customer services</string>
    <string name="main_bottom_home" translatable="false">Hey</string>
    <string name="main_bottom_message" translatable="false">Message</string>
    <string name="main_bottom_mine" translatable="false">My Profile</string>
    <string name="personal_info_name" translatable="false">Nickname</string>
    <string name="personal_info_declaration" translatable="false">Declaration of Friendship</string>
    <string name="personal_info_birthday" translatable="false">Birthday</string>
    <string name="personal_info_sex_tv" translatable="false">Gender</string>
    <string name="personal_info_address" translatable="false">Address</string>
    <string name="create_personal_info_title" translatable="false">Personal information</string>
    <string name="create_personal_info_name_et_hint" translatable="false">Please enter a name</string>
    <string name="create_personal_info_sex_tv_hint" translatable="false">（After select your gender, it can not be modified.）</string>
    <string name="create_personal_info_male_tv" translatable="false">Male</string>
    <string name="create_personal_info_female_tv" translatable="false">Female</string>
    <string name="create_personal_info_select_date_tv" translatable="false">select date</string>
    <string name="create_personal_info_address_hint_et" translatable="false">Please enter the name of your city</string>
    <string name="personal_info_declaration_hint_ev" translatable="false">Sincere friends, I hope you like me.</string>
    <string name="PersonalInfoUploadPhotoActivity_hint_tv" translatable="false">Please upload clear photos or videos with clear facial features to pair success</string>
    <string name="PersonalInfoUploadPhotoActivity_declaration_ev" translatable="false">Please write your declaration of friendship</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="Unlimited" translatable="false">No limit</string>
    <string name="Height" translatable="false">Height:&#160;</string>
    <string name="Weight" translatable="false">Weight:&#160;</string>
    <string name="Chest" translatable="false">Chest:&#160;</string>
    <string name="Birthday" translatable="false">Birthday:&#160;</string>
    <string name="Professional" translatable="false">Career:&#160;</string>
    <string name="EditContactWay_contact_is_noll" translatable="false">please add contact</string>
    <string name="EditContactWay_select_contact_way" translatable="false">Select Contact way</string>
    <string name="EditContactWay_add_more" translatable="false">add more</string>
    <string name="EditLabelActivity_dialog_delete_label_hint" translatable="false">delete the label?</string>
    <string name="EditLabelActivity_dialog_add_label_hint" translatable="false">please add label</string>
    <string name="EditLabelActivity_tag_hint" translatable="false">please write your tag</string>
    <string name="EditLabelActivity_tag_add" translatable="false">Add to </string>
    <string name="CustomizeMessageItemProvider_left_photo" translatable="false">Received One Private Photo</string>
    <string name="CustomizeMessageItemProvider_left_photo_hint" translatable="false">This is a private message users only</string>
    <string name="CustomizeMessageItemProvider_right_photo" translatable="false">Send a private photo</string>
    <string name="CustomizeMessageItemProvider_right_photo_hint" translatable="false">This is a private message </string>
    <string name="CustomizeMessageItemProvider_private_message" translatable="false">Private message </string>
    <string name="EditMakeFriendsInfoActivity_upload_hint" translatable="false">reload your photos/videos</string>
    <string name="EditMakeFriendsInfoActivity_head_img" translatable="false">Profile photo</string>
    <string name="RecommendUserInfoActivity_look_over_hint" translatable="false">Look over</string>
    <string name="RecommendUserInfoActivity_label_hint" translatable="false">The Label</string>
    <string name="RecommendUserInfoActivity_no_friends" translatable="false">You are not friends yet.</string>
    <string name="RecommendUserInfoActivity_look_contact_hint" translatable="false">Are you sure look contact?</string>
    <string name="CreatePersonalInfoActivity_nice_is_empty" translatable="false">Nickname can not be empty</string>
    <string name="CreatePersonalInfoActivity_sex_is_empty" translatable="false">Gender can not be empty</string>
    <string name="CreatePersonalInfoActivity_birthday_is_empty" translatable="false">Birthday can not be empty</string>
    <string name="CreatePersonalInfoActivity_address_is_empty" translatable="false">City can not be empty</string>
    <string name="CreatePersonalInfoActivity_cover_is_empty" translatable="false">Cover can not be empty</string>
    <string name="CreatePersonalInfoActivity_image_is_empty" translatable="false">Image can not be empty</string>
    <string name="PersonalInfoUploadPhotoActivity_declaration_is_empty" translatable="false">Declaration of Friendship can not be empty</string>
    <string name="app_nick_hint" translatable="false">Please enter a nickname</string>
    <string name="EditPersonalInfoActivity_Address" translatable="false">Address</string>
    <string name="EditPersonalInfoActivity_address_hint" translatable="false">Please enter your city</string>
    <string name="EditPersonalInfoActivity_Height" translatable="false">Height</string>
    <string name="EditPersonalInfoActivity_Height_hint" translatable="false">Please enter your height</string>
    <string name="EditPersonalInfoActivity_Weight" translatable="false">Weight</string>
    <string name="EditPersonalInfoActivity_Weight_hint" translatable="false">Please enter your Weight</string>
    <string name="EditPersonalInfoActivity_Chest" translatable="false">Chest</string>
    <string name="EditPersonalInfoActivity_Chest_hint" translatable="false">Please enter your Chest</string>
    <string name="EditPersonalInfoActivity_Birthday" translatable="false">Birthday</string>
    <string name="EditPersonalInfoActivity_Birthday_hint" translatable="false">Please enter your Birthday</string>
    <string name="EditPersonalInfoActivity_Occupation" translatable="false">Career</string>
    <string name="EditPersonalInfoActivity_Occupation_hint" translatable="false">Please fill in your occupation</string>
    <string name="UploadPhotoActivity_upload_pic_or_video_hint" translatable="false">Please upload vivid photos or videos</string>
    <string name="UploadPhotoActivity_upload_pic_hint" translatable="false">Please select a photo type</string>
    <string name="UploadPhotoActivity_upload_beans_hint" translatable="false">Please select Hey beans num</string>
    <string name="UploadPhotoActivity_video_hint" translatable="false">Please upload vivid photos or videos with clear facial features.</string>
    <string name="UploadPhotoActivity_video_or_photo_type_hint" translatable="false">Choose Photo/Video Type</string>
    <string name="UploadPhotoActivity_ordinary" translatable="false">Common Photo/Video</string>
    <string name="UploadPhotoActivity_ordinary_hint" translatable="false">（Show it to Everyone）</string>
    <string name="UploadPhotoActivity_membership" translatable="false">Membership Photos/Videos</string>
    <string name="UploadPhotoActivity_membership_hint" translatable="false">（VIP only）</string>
    <string name="UploadPhotoActivity_private" translatable="false">Private Photos/Videos</string>
    <string name="UploadPhotoActivity_private_hint" translatable="false">（Users need to pay you Hey Dou for checking）</string>
    <string name="UploadPhotoActivity_custom_num" translatable="false">custom</string>
    <string name="DataFraudActivity_desc_is_null" translatable="false">Please describe your problem</string>
    <string name="DataFraudActivity_only_80_word" translatable="false">only 80 word.</string>
    <string name="DataFraudActivity_only_100_word" translatable="false">only 100 word.</string>
    <string name="DataFraudActivity_head_portraits" translatable="false">Fake Profile or Photo Data</string>
    <string name="DataFraudActivity_pic_num" translatable="false">Upload Screenshots, Improve Accuracy</string>
    <string name="DataFraudActivity_other_content" translatable="false">More Detail Your Want to Report(multi-line)</string>
    <string name="ReportUserActivity_advertising" translatable="false">Advertise 、Promotion</string>
    <string name="ReportUserActivity_Fraud" translatable="false">Fraud</string>
    <string name="buy_dailog_title" translatable="false">Super exposure</string>
    <string name="buy_dailog_hint" translatable="false">Available Hey Beans：</string>
    <string name="use_exposure_dialog_hint" translatable="false">number of times</string>
    <string name="use_exposure_dialog_use" translatable="false">Use once</string>
    <string name="use_exposure_dialog_desc" translatable="false">Pairs! 10 times more exposure over others in 30 minutes</string>
    <string name="PhotoDialog_title" translatable="false">Choose how to open</string>
    <string name="PhotoDialog_photo" translatable="false">photo</string>
    <string name="PhotoDialog_album" translatable="false">Album</string>
</resources>