<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/buy_hibeans_background"
    android:orientation="vertical"
    tools:context=".mvp.ui.activity.pay.RechargeActivity">

    <include layout="@layout/common_toolbar2" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_64"
                android:text="@string/recharge_current_beans_num_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_36"
                    android:layout_height="@dimen/dp_36"
                    android:src="@mipmap/mine_icon_hibeans" />

                <TextView
                    android:id="@+id/current_hi_beans_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_34" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/recharge_amount_of_money"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/recharge_means_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/recharge_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/recharge_app_agreement"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />

            <!-- 联系客服-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recharge_problems_hint"
                    android:textColor="#FFD97C"
                    android:textSize="@dimen/sp_10" />

                <TextView
                    android:id="@+id/contact_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recharge_contact_customer"
                    android:textColor="#FFD97C"
                    android:textSize="@dimen/sp_10" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>