<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_buy_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pop_contain"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dp_30"
        android:padding="@dimen/dp_15"
        android:src="@mipmap/popup_close" />

    <LinearLayout
        android:id="@+id/pop_contain"
        android:layout_width="@dimen/dp_265"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:background="@mipmap/home_popup_use"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_83"
            android:text="@string/buy_dailog_title"
            android:textColor="@color/second_text_color"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/use_dialog_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_horizontal"
            android:paddingEnd="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:text="@string/use_exposure_dialog_desc"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/use_exposure_dialog_beans_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:textColor="@color/color_blue_btn"
            android:textSize="@dimen/sp_48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/use_exposure_dialog_hint"
            android:textColor="@color/color_blue_btn"
            android:textSize="@dimen/sp_16" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_26"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_popup_hibeans_small" />

            <TextView
                android:id="@+id/beans_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_6"
                android:text="@string/buy_dailog_hint"
                android:textColor="@color/first_text_color"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:id="@+id/dialog_buy_use_exposure"
            android:layout_width="@dimen/dp_179"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/yellow_btn"
            android:gravity="center"
            android:text="@string/use_exposure_dialog_use"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

</RelativeLayout>