<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_photo_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:background="@drawable/bg_white_round_5"
        android:gravity="center_horizontal"
        android:minHeight="@dimen/dp_200"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_horizontal"
            android:text="@string/PhotoDialog_title"
            android:textColor="@color/color_blue_btn"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/dialog_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/btn_photo_bg"
            android:text="@string/PhotoDialog_photo"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/sp_15" />

        <Button
            android:id="@+id/dialog_album"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/btn_photo_bg"
            android:text="@string/PhotoDialog_album"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

</RelativeLayout>