<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvp.ui.activity.photo.UploadPhotoActivity">

    <include layout="@layout/common_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_345"
                android:layout_marginEnd="@dimen/dp_18"
                android:layout_marginStart="@dimen/dp_18"
                android:scaleType="centerCrop"
                android:src="@mipmap/upload_photos" />

            <cn.jzvd.JzvdStd
                android:id="@+id/jz_video"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_345"
                android:layout_marginEnd="@dimen/dp_18"
                android:layout_marginStart="@dimen/dp_18"
                android:visibility="gone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/UploadPhotoActivity_video_hint"
                android:textColor="@color/first_text_color"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_22"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/UploadPhotoActivity_video_or_photo_type_hint"
                android:textColor="@color/first_text_color"
                android:textSize="@dimen/sp_14" />

            <!-- 普通照片/视频-->
            <LinearLayout
                android:id="@+id/ordinary_photo_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ordinary_photo_check_iv"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_32"
                    android:padding="@dimen/dp_5"
                    android:src="@drawable/pay_hibeans_no_choose" />

                <TextView
                    android:id="@+id/ordinary_photo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:text="@string/UploadPhotoActivity_ordinary"
                    android:textColor="@color/color_80"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UploadPhotoActivity_ordinary_hint"
                    android:textColor="@color/color_9b"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <View style="@style/line_height_1" />
            <!-- 会员照片/视频-->
            <LinearLayout
                android:id="@+id/vip_photo_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginStart="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/vip_photo_check_iv"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_32"
                    android:padding="@dimen/dp_5"
                    android:src="@drawable/pay_hibeans_no_choose" />

                <TextView
                    android:id="@+id/vip_photo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:text="@string/UploadPhotoActivity_membership"
                    android:textColor="@color/color_80"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UploadPhotoActivity_membership_hint"
                    android:textColor="@color/color_9b"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <View style="@style/line_height_1" />


            <!-- 私密照片/视频-->
            <LinearLayout
                android:id="@+id/private_photo_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/private_photo_check_iv"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_32"
                    android:padding="@dimen/dp_5"
                    android:src="@drawable/pay_hibeans_no_choose" />

                <TextView
                    android:id="@+id/private_photo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:text="@string/UploadPhotoActivity_private"
                    android:textColor="@color/color_80"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginStart="@dimen/dp_35"
                android:text="@string/UploadPhotoActivity_private_hint"
                android:textColor="@color/color_9b"
                android:textSize="@dimen/sp_12" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginStart="@dimen/dp_22"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_8">

                <TextView
                    android:id="@+id/beans_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_beans_selector_5"
                    android:drawablePadding="@dimen/dp_2"
                    android:drawableStart="@mipmap/home_popup_hibeans"
                    android:paddingEnd="@dimen/dp_12"
                    android:paddingStart="@dimen/dp_12"
                    android:text="1"
                    android:textSize="@dimen/sp_24" />

                <TextView
                    android:id="@+id/beans_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@drawable/bg_beans_selector_5"
                    android:drawablePadding="@dimen/dp_2"
                    android:drawableStart="@mipmap/home_popup_hibeans"
                    android:paddingEnd="@dimen/dp_12"
                    android:paddingStart="@dimen/dp_12"
                    android:text="5"
                    android:textSize="@dimen/sp_24" />

                <EditText
                    android:id="@+id/beans_custom_ev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@drawable/bg_beans_selector_5"
                    android:drawablePadding="@dimen/dp_4"
                    android:drawableStart="@mipmap/home_popup_hibeans"
                    android:hint="@string/UploadPhotoActivity_custom_num"
                    android:minHeight="@dimen/dp_33"
                    android:layout_marginTop="@dimen/dp_m_2"
                    android:inputType="number"
                    android:paddingEnd="@dimen/dp_12"
                    android:paddingStart="@dimen/dp_12"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="@dimen/sp_18" />

            </LinearLayout>


            <!--保存 -->
            <Button
                android:id="@+id/save_btn"
                android:layout_width="@dimen/dp_228"
                android:layout_height="@dimen/dp_35"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_blue2_round_20_selector"
                android:text="@string/Complete"
                android:textColor="@color/white" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>